--- a/iris_clustering.ipynb
+++ b/iris_clustering.ipynb
@@ -1,4 +1,3 @@
-#code by prarthana v
 {
   "nbformat": 4,
   "nbformat_minor": 0,
@@ -6,7 +5,9 @@
     "colab": {
       "name": "iris_clustering.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNMhGvb3h9lAdnwlLUclrsx",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,25 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Prarthanav/iris-k-means-clustering/blob/main/iris_clustering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "53kzit4wuJIm"
+      },
+      "source": [
+        "## **CODE BY PRARTHANA V**"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
